# 0xauth-stellar

./: .gitignore  README.md
bridgeActions/stellar_actions/: event.js
bridgeActions/test_stellar_actions/: test_add_claim.js  test_add_key.js  test_create_identity.js  test_remove_claim.js  test_remove_key.js
bridge_actions/: .env.example  README.md  package-lock.json  package.json  update_actions.js  webpack.config.js
bridge_actions/actions_automation/: retrieve_actions.js  retrieve_monitors.js
bridge_actions/stellar_actions/: add_claim.js  add_key.js  create_identity.js  getID.js  remove_claim.js  remove_key.js
bridge_actions/test_stellar_actions/: payload_structure.js  test_add_claim.js  test_add_key.js  test_create_identity.js  test_remove_claim.js  test_remove_key.js
contracts/claim_issuer/: Cargo.toml
contracts/claim_issuer/src/: lib.rs  state.rs  test.rs
contracts/claim_issuer/test_snapshots/test/: test_add_claim.1.json  test_add_key.1.json  test_initialize.1.json  test_is_claim_valid.1.json  test_remove_claim.1.json  test_remove_key.1.json  test_revoke_claim.1.json
contracts/factory/src/: lib.rs  test.rs
contracts/gated/: Cargo.toml
contracts/gated/src/: lib.rs  test.rs
contracts/identity/: Cargo.toml
contracts/identity/src/: lib.rs  state.rs  test.rs
contracts/identity/test_snapshots/test/: test_add_claim.1.json  test_add_key.1.json  test_remove_claim.1.json  test_remove_key.1.json
contracts/trex/: Cargo.toml
contracts/trex/src/: lib.rs
scripts/: deploy_claim_issuer.sh  deploy_identity.sh  fund_keys.sh
